--- a/front/package.json
+++ b/front/package.json
@@ -17,9 +17,10 @@
     "@react-navigation/stack": "^6.4.1",
     "@tanstack/react-query": "^5.56.2",
     "axios": "^1.7.7",
-    "react": "18.3.1",
+    "react": "^18.3.1",
     "react-native": "0.75.3",
     "react-native-encrypted-storage": "^4.0.3",
+    "react-native-geolocation-service": "^5.3.0",
     "react-native-gesture-handler": "^2.20.0",
     "react-native-maps": "^1.18.0",
     "react-native-reanimated": "^3.15.3",
@@ -34,7 +35,7 @@
     "@react-native/eslint-config": "0.75.3",
     "@react-native/metro-config": "0.75.3",
     "@react-native/typescript-config": "0.75.3",
-    "@types/react": "^18.2.6",
+    "@types/react": "^18.3.11",
     "@types/react-test-renderer": "^18.0.0",
     "babel-jest": "^29.6.3",
     "babel-plugin-module-resolver": "^5.0.2",
@@ -42,10 +43,9 @@
     "jest": "^29.6.3",
     "prettier": "2.8.8",
     "react-test-renderer": "18.3.1",
-    "typescript": "5.0.4"
+    "typescript": "^5.6.3"
   },
   "engines": {
     "node": ">=18"
-  },
-  "packageManager": "yarn@4.5.0+sha512.837566d24eec14ec0f5f1411adb544e892b3454255e61fdef8fd05f3429480102806bac7446bc9daff3896b01ae4b62d00096c7e989f1596f2af10b927532f39"
+  }
 }
