--- a/front/ios/map/Info.plist
+++ b/front/ios/map/Info.plist
@@ -41,6 +41,9 @@
 	<key>NSLocationWhenInUseUsageDescription</key>
 	<string>앱을 사용하는 동안 위치 정보를 확인하기 위해 위치 접근 권한이 필요합니다. 현재 위치를 기반으로 장소를 등록하는 데 사용되며, 위치 정보는 서버에 저장되지 않습니다.</string>
 
+	<key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
+	<string>앱을 사용하는 동안과 백그라운드에서 위치 정보를 확인하기 위해 위치 접근 권한이 필요합니다. 위치 정보는 서버에 전송되지 않으며, 언제든지 설정에서 권한을 변경할 수 있습니다.</string>
+
 	<key>NSPhotoLibraryAddUsageDescription</key>
 	<string>게시글을 등록할 때 사진을 선택하기 위해 사진 라이브러리 접근 권한이 필요합니다.</string>
 
